test: use parameterized tests for ES/OS adapters